vcs/specs/parser/fail/declarations/missing_const_value.vr
// @test: parse-fail
// @level: L0
// @tags: parser, declarations, const, error
// @description: Test missing const value detection
// @expected-error: E066

const X: Int;

const PI: Float;

const NAME: Text =;

public const MAX: Int = ;
